[tool.poetry]
name = "rotla"
version = "2.0.0"
description = "Reader of the Lost Arcs (ROTLA) - A Python package for detecting mitochondrial deletions using split-read analysis"
authors = [
    "Christopher Andrew Lavender <c.andrew.lavender@gmail.com>",
    "Adam Burkholder <adam.burkholder@nih.gov>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/NIEHS/ROTLA"
repository = "https://github.com/NIEHS/ROTLA"
documentation = "https://github.com/NIEHS/ROTLA"
keywords = ["bioinformatics", "genomics", "mitochondria", "dna", "deletions"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "ROTLA" }
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
configparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.0"
pylint = "^3.0.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
rotla = "ROTLA.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=ROTLA"
testpaths = [
    "tests",
]